Fix on "front-end" stroke and fill color transition when switching dark mode

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,11 +1,5 @@
 .transparent-fill {
     -webkit-text-stroke-width: 0.028em;
-    -webkit-text-stroke-color: #525252;
-}
-
-:root.dark .transparent-fill {
-    -webkit-text-stroke-width: 0.028em;
-    -webkit-text-stroke-color: #fafafa;
 }
 
 .transparent-fill:not(:hover) {
